<resources>
    <string name="ROCK_PAPER_SCISSORS">TASK1</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="play">PLAY</string>
    <string name="dual_players">DUAL PLAYERS</string>
    <string name="computer_choice">COMPUTER CHOICE</string>
    <string name="score_cmp">SCORE</string>
    <string name="scissors">SCISSORS</string>
    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="score_player">POINTS</string>
    <string name="your_choice">YOUR CHOICE</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="app_name">GAME</string>
    <string name="player_1.0">PLAYER 1.0</string>
    <string name="player_2">PLAYER 2</string>
    <string name="score">SCORE</string>
    <string name="paper1">paper1</string>
    <string name="rock1">rock1</string>
    <string name="scissors1">scissors1</string>
    <string name="paper2">paper2</string>
    <string name="scissors2">scissors2</string>
    <string name="rock2">rock2</string>
    <string name="score2">SCORE2</string>
    <string name="player_4">PLAYER 4</string>
    <string name="player_3">PLAYER 3</string>
    <string name="you_have_lost">YOU HAVE LOST</string>
    <string name="player_name">PLAYER NAME</string>
    <string name="with">WITH</string>
    <string name="points">POINTS</string>
    <string name="you_have_won">YOU HAVE WON</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="name">Name</string>
    <string name="single_player_game">SINGLE PLAYER GAME</string>
    <string name="rounds">ROUNDS</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="player_1">PLAYER 1</string>
    <string name="dual_player_game">DUAL PLAYER GAME</string>
    <string name="it_is_a_draw_2">IT IS A DRAW 2</string>
    <string name="it_is_a_draw">IT IS A DRAW</string>
    <string name="round">ROUND</string>
    <string name="submit">SUBMIT</string>
    <string name="dual_result">DUAL RESULT</string>
    <string name="winner">WINNER</string>
    <string name="winner_name">winner name</string>
    <string name="wpoints">WPOINTS</string>
    <string name="loser">LOSER</string>
    <string name="loser_name">loser name</string>
    <string name="lpoints">LPOINTS</string>
    <string name="_5">5</string>
</resources>
