<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dual">

    <TextView
        android:id="@+id/player1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/player_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/dualscore1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toEndOf="@+id/player1_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <ImageButton
        android:id="@+id/paper1_ib"
        android:layout_width="66dp"
        android:layout_height="85dp"
        android:contentDescription="@string/paper1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/rock1_ib"
        android:layout_width="92dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/rock1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scissors1_ib"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/paper1_ib"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/scissors1_ib"
        android:layout_width="87dp"
        android:layout_height="86dp"
        android:contentDescription="@string/scissors1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        app:srcCompat="@drawable/scissors" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-11dp" />

    <TextView
        android:id="@+id/dualscore2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/score2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/player2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dualscore2_tv"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <ImageButton
        android:id="@+id/paper2_ib"
        android:layout_width="73dp"
        android:layout_height="79dp"
        android:contentDescription="@string/paper2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/rock2_ib"
        android:layout_width="90dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/rock2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scissors2_ib"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/paper2_ib"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/scissors2_ib"
        android:layout_width="83dp"
        android:layout_height="84dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/scissors2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/sglrounds_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rounds"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rock2_ib"
        app:layout_constraintEnd_toStartOf="@+id/dualscore2_tv"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/player2_tv"
        app:layout_constraintTop_toBottomOf="@+id/rock1_ib"
        app:layout_constraintVertical_bias="0.193" />

</androidx.constraintlayout.widget.ConstraintLayout>