<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dualresult">

    <TextView
        android:id="@+id/dualrsult_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dual_result"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/winner_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winner_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/loser_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dualrsult_tv" />

    <TextView
        android:id="@+id/playerwon_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_name"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/loser_tv"
        app:layout_constraintEnd_toStartOf="@+id/winnerpoints_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_tv"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/winnerpoints_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wpoints"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lostpoints_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerwon_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/loser_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loser"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_tv"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/playerlost_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loser_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lostpoints_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loser_tv"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/lostpoints_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lpoints"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerlost_tv"
        app:layout_constraintTop_toBottomOf="@+id/loser_tv"
        app:layout_constraintVertical_bias="0.075" />
</androidx.constraintlayout.widget.ConstraintLayout>