<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f2fd"
    tools:context=".dualinfo">

    <TextView
        android:id="@+id/dual_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/dual_player_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dualply1_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dualround_tv"
        android:layout_width="193dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_of_rounds"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:text="5" />

    <TextView
        android:id="@+id/dualply1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dualply1name_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <EditText
        android:id="@+id/dualply1name_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_player_name"
        android:inputType="textPersonName"
        android:text="@string/player_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dualply2_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dualply2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/player_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dualply2name_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dualply2name_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_player_name"
        android:inputType="textPersonName"
        android:text="@string/player_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dualround_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dualbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/dualround_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

</androidx.constraintlayout.widget.ConstraintLayout>